<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wardrive</string>
    
    <string name="mapviewer_menu_mapmode">Map mode</string>
    <string name="mapviewer_menu_import">Import</string>
    <string name="mapviewer_menu_export">Export</string>
    <string name="mapviewer_menu_start_scanning">Start scanning</string>
    <string name="mapviewer_menu_scanning">[Stop] Scanning...</string>
    <string name="mapviewer_menu_settings">Settings</string>
    
    <string name="dlg_import_title">Choose import source</string>
    <string name="dlg_import_oldwardrive">Old wardrive database</string>
    
    <string name="dlg_export_title">Choose export type</string>
    <string name="dlg_export_kml">to KML (Google Earth)</string>
    <string name="dlg_export_wigle">to KML for WiGlE (and Upload it)</string>
    
    <string name="dlg_importold_nofilefound_title">No file found to import</string>
    <string name="dlg_importoldprogress_title">Importing</string>
    <string name="dlg_importoldprogress_message">Importing networks...</string>
    
    <string name="dlg_exportkmlprogress_title">Exporting</string>
    <string name="dlg_exportkmlprogress_message">Exporting networks to KML...</string>

    <string name="dlg_exportwigleprogress_title">Uploading</string>
    <string name="dlg_exportwigleprogress_message">Uploading networks to WiGlE...</string>
    <string name="dlg_exportwigleprogress_err_no_user_and_pass">Error: Username and Password are not set.</string>

    <!-- Strings on settings -->
    
    <string name="settings_header_account">Account and Synchronization</string>
    <string name="settings_account_manage">Manage wardrive Synchronization</string>
    <string name="settings_account_manage_summary">Change or create a synchronization to wardrive.org</string>
    <string name="settings_account_group_wigleSettings">WiGlE Account</string>
    <string name="settings_account_wigleUpload_accountDetails_username">Username</string>
    <string name="settings_account_wigleUpload_accountDetails_password">Password</string>
    
    <string name="settings_header_scanning">WiFi scanning</string>
    <string name="settings_gpserror_title">GPS Error</string>
    <string name="settings_gpserror_summary">Acceptable error of GPS calculation in meters. When error is bigger, WiFi are not scanned. Default is 50.</string>
    <string name="setting_minlevel_title">WiFi strength</string>
    <string name="setting_minlevel_summary">The minimum WiFi strength accepted for scanning. Value is expressed in dBm. Default is -99.</string>
    <string name="settings_autostartscan_title">Scanning Auto Start</string>
    <string name="settings_autostartscan_summary">Activates the WiFi scanning on application start</string>
    
    <string name="settings_header_map">Map options</string>
    <string name="settings_mapfollowme_title">Follow my position</string>
    <string name="settings_mapshowsat_title">Show satellite map</string>
    <string name="settings_mapshowlabels_title">Show WiFi labels</string>
    
    <string name="settings_header_data">Data</string>
    <string name="settings_filterfromdatecheck_title">View only updated WiFis</string>
    <string name="settings_filterfromdate_title">View only WiFis updated after date</string>
    <string name="settings_mapshowopen_title">Show open WiFis</string>
    <string name="settings_mapshowclosed_title">Show closed WiFis</string>
    <string name="settings_mapshowwep_title">Show WEP WiFis</string>
    <string name="settings_mapshowstats_title">Show Statistics</string>
    <string name="settings_erasealldata">Erase ALL local data</string>
    <string name="settings_erasealldata_summary">Erasing all local data will not alter the saved WiFi on server side.</string>
    <string name="settings_erasealldata_dlg_title">Erase ALL Data</string>
    <string name="settings_erasealldata_dlg_message">
        <![CDATA[This will erase all the local saved data. The operation affects only the local database, and if you have saved data on the web side, ensure to delete the account there first in order to have a clean slate. If not, the data will return from the server in the next synchronization cycle.]]>
    </string>
    
    <string name="stats_total_wifi">Total WiFi count:</string>
    <string name="stats_total_open_wifi">Open count:</string>
    <string name="stats_total_wep_wifi">WEP count:</string>
    <string name="stats_total_closed_wifi">Closed count:</string>
    
    <!-- General messages, for example common buttons -->
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    
</resources>
